disabled webkit-overflow-scrolling: touch; because it is buggy.

--- a/public/siphon/siphon.css
+++ b/public/siphon/siphon.css
@@ -53,7 +53,7 @@ textarea#edit {
 
 .scroll {
 	overflow: auto;
-	-webkit-overflow-scrolling: touch;
+/*	-webkit-overflow-scrolling: touch; /* is buggy. 2011/12/04 */
 }
 
 .key {
